--- a/app/config.json
+++ b/app/config.json
@@ -1,6 +1,10 @@
 {
   "resources": {
     "models": {
+      "triangle": {
+        "path": "triangle.obj",
+        "flip_uvs": false
+      }
     }
   },
   "window": {
