Implement moving the camera and add a more complex model

--- a/app/config.json
+++ b/app/config.json
@@ -4,6 +4,10 @@
       "triangle": {
         "path": "triangle.obj",
         "flip_uvs": false
+      },
+      "bunny": {
+        "path": "bunny.obj",
+        "flip_uvs": false
       }
     }
   },
