Add a light post object and render it Clamp mouse delta to avoid sudden snaps when the mouse enters the window Some other temp code

--- a/app/config.json
+++ b/app/config.json
@@ -12,6 +12,10 @@
       "cube": {
         "path": "cube.obj",
         "flip_uvs": false
+      },
+      "lamp_post": {
+        "path": "lamp_post.obj",
+        "flip_uvs": false
       }
     }
   },
