--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,7 +9,9 @@ add_executable(${PROJECT_NAME} ${sources} ${headers}
         src/MainController.cpp
         src/MainController.hpp
         src/Scene.cpp
-        src/Scene.h)
+        src/Scene.h
+        src/AnimationController.cpp
+        src/AnimationController.h)
 target_link_libraries(${PROJECT_NAME} PRIVATE matf-rg-engine)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
