Add a lantern with an emissive map

--- a/app/config.json
+++ b/app/config.json
@@ -73,6 +73,10 @@
         "path": "lamp_post/lamp_post.obj",
         "flip_uvs": true
       },
+      "lantern": {
+        "path": "lantern/Lantern.obj",
+        "flip_uvs": true
+      },
       "BallAndBox": {
         "path": "debug/BallAndBox.obj",
         "flip_uvs": true
